fixed font size for readability

--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ section{
 }
 
 .projects{
-    margin:0 10px 40px 10px; 
+    margin:0 32px 40px 32px; 
 }
 
 
@@ -234,7 +234,7 @@ section{
 .section-description p{
     margin:0px 0 20px 0;
     padding:0;
-    font-size: 18px;
+    font-size: 20px;
     font-weight:100;
     color:var(--secondarycolour);
 }
@@ -284,7 +284,7 @@ section{
 }
 
 .gallery-container p{
-    font-size: 18px;
+    font-size: 20px;
     width:95%;
     font-weight:100;
     color:var(--secondarycolour);
@@ -357,7 +357,7 @@ bottom:0;
 }
 
 .footer-text p{
-    font-size: 18px;
+    font-size: 20px;
     color:var(--secondarycolour);
     font-weight: 300;
     margin:0;
@@ -429,15 +429,21 @@ bottom:0;
     .nav-items{
         margin:0 0 0 30px;
     }
+
 .gallery{
     flex-wrap:initial;
 }
+
 #puzzles img{
     width:95%;
 }
 
 #clothing img{
     width:95%;
+}
+
+.projects{
+    margin:0 10px 40px 10px; 
 }
     
 }
